--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
     <div class="text-center m-9">
         <div class="">
             <img class="w-52 mx-auto" src="images/bismillah-in-the-name-of-allah.jpg" alt="">
-            <h1 class="text-4xl lg:text-7xl font-black text-cyan-400">Digital Tasbih</h1>
+            <h1 class="text-4xl lg:text-7xl font-black text-teal-950 lg:text-cyan-400">Digital Tasbih</h1>
         </div>
         <div class="my-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- subhanAllahbox -->
             <div id="subhanAllahbox" class="shadow-xl space-y-6 py-6 rounded-md">
-                <h3 class="text-3xl font-semibold">سُبْحَانَ ٱللَّٰ <br>Subhan Allah</h3>
-                <p id="subhanAllahCount" class="text-6xl font-semibold">0</p>
+                <h3 class="text-3xl text-teal-950 font-semibold">سُبْحَانَ ٱللَّٰ <br>Subhan Allah</h3>
+                <p id="subhanAllahCount" class="text-6xl font-semibold text-pink-600">0</p>
                 <button id="subhanAllahIncrement" class="text-lg bg-green-400 hover:bg-violet-400 text-white px-6 py-2 rounded-xl shadow-md font-semibold">INCREMENT</button>
                 <button id="subhanAllahDecrement" class="text-lg bg-red-600 hover:bg-red-500 text-white px-6 py-2 rounded-xl shadow-md font-semibold">DECREMENT</button>
             </div>
             <!-- alhamdulilahbox -->
             <div id="alhamdulilahbox" class="shadow-xl space-y-6 py-6 rounded-md">
-                <h3 class="text-3xl font-semibold">ٱلْحَمْدُ لِلّٰ  <br>Alhamdulilah
+                <h3 class="text-3xl text-teal-950 font-semibold">ٱلْحَمْدُ لِلّٰ  <br>Alhamdulilah
                 </h3>
-                <p id="alhamdullilahCount"  class="text-6xl font-semibold">0</p>
+                <p id="alhamdullilahCount"  class="text-6xl font-semibold text-pink-600">0</p>
                 <button id="alhamdulilahIncrement" class="text-lg bg-green-400 hover:bg-violet-400 text-white px-6 py-2 rounded-xl shadow-md font-semibold">INCREMENT</button>
                 <button id="alhamdulilahDecrement" class="text-lg bg-red-600 hover:bg-red-500 text-white px-6 py-2 rounded-xl shadow-md font-semibold">DECREMENT</button>
             </div>
             <!-- Allahuakber -->
             <div id="Allahuakberbox" class="shadow-xl space-y-6 py-6 rounded-md">
-                <h3 class="text-3xl font-semibold">الله أكبر <br>Allahu Akbar
+                <h3 class="text-3xl text-teal-950 font-semibold">الله أكبر <br>Allahu Akbar
                 </h3>
-                <p id="allahHuAkbarCount"  class="text-6xl font-semibold">0</p>
+                <p id="allahHuAkbarCount"  class="text-6xl font-semibold text-pink-600">0</p>
                 <button id="allahhuAkbarIncrement" class="text-lg bg-green-400 hover:bg-violet-400 text-white px-6 py-2 rounded-xl shadow-md font-semibold">INCREMENT</button>
                 <button id="allahhuAkbarDecrement" class="text-lg bg-red-600 hover:bg-red-500 text-white px-6 py-2 rounded-xl shadow-md font-semibold">DECREMENT</button>
             </div>
         </div>
         <div>
-            <button id="reset-btn" class="bg-gradient-to-r from-rose-500 to-rose-950 rounded-lg text-white font-semibold px-5 py-2 text-lg">RESET ALL TASBIH</button>
+            <button id="reset-btn" class="bg-pink-600 rounded-lg text-white font-semibold px-5 py-2 text-lg">RESET ALL TASBIH</button>
         </div>
         <div class="mt-8">
             <small class="text-gray-500">Created by Foysal Ahmad</small>
